# qwen-agent-runtime

./: .gitignore  README.md  pyproject.toml  requirements.txt
agent/: __init__.py  __main__.py  daytona_runtime.py  executor.py
config/: config.example.yaml  config.yaml
db/: README.md
db/schemas/: agent-runtime.surql  healthguard-clinical.surql  knowledge-base.surql
docs/diagrams/: chat-loop-flow.d2  repo-structure.d2  system-architecture.d2
docs/diagrams/healthguard/: ecosystem-architecture.d2
guardrails/: __init__.py  approval.py  sanitizer.py  timeout.py  whitelist.py
presentation/: main.qd
scripts/: bootstrap_awesome_ps.ps1  setup_windows.ps1
siem/: audit_logger.py
tests/: test_daytona.py  test_guardrails.py
